--- a/docs/thesis/glossary.tex
+++ b/docs/thesis/glossary.tex
@@ -25,8 +25,17 @@
 %		Programming Interface}, first={Application
 %		Programming Interface (API)\glsadd{apig}}, see=[Glossary:]{apig}}
 
-\newglossaryentry{bitcoin}{name={Bitcoin}, description={Bitcoin is a peer-to-peer electronic cash network and a currency native to the network.}}
+\newglossaryentry{bip}{name={BIP}, description={Bitcoin Improvment Proposal, a standarized way to suggest changes to Bitcoin }}
 
-\newglossaryentry{blockchain}{name={blockchain},description={A blockchain is a growing datastructure consistent of blocks containing transactions, a cryptograpic hash of the previous block and a timestamp. It is record or ledger over the full transaction history.  }}
+\newglossaryentry{bitcoin}{name={Bitcoin}, description={Bitcoin is a peer-to-peer electronic cash network and a currency native to the network }}
 
-\newglossaryentry{degree}{name={degree distribution}, description={The distribution over the fraction of nodes with k edges. }}
+\newglossaryentry{blockchain}{name={blockchain},description={A blockchain is a growing datastructure consistent of blocks containing transactions, a cryptograpic hash of the previous block and a timestamp. It is a record or ledger over the full transaction history }}
+
+\newglossaryentry{degree distribution}{name={degree distribution}, description={is the probability distribution over the nodes degree, i.e. the amount of edges . Usually denoted with a function $f(k)$ given the fraction of the network with exactly $k$ edges }}
+
+\newglossaryentry{miner}{name={miner}, description={A miner is a specific Bitcoin node that runs the \textit{Proof-of-Work} algorithm, i.e. finding blocks and filling them with valid transactions }}
+
+\newglossaryentry{Lightning Network}{name={Lightning Network}, description={is a second layer payment protocol consistent of payment channels built on a blockchain based base layer. Although it is not necesarily exclusive to Bitcoin; Bitcoin is the only base layer with major development efforts. The Lightning Network, as referred in this thesis, always refers to the network built on Bitcoin }}
+
+\newglossaryentry{channel}{name={channel}, description={, payment channel or micropayment channel is a locked up fund of Bitcoin between two nodes enabling near infinite secure payments at the cost of only a few on-chain transactions  }}
+
