--- a/docs/thesis/results.tex
+++ b/docs/thesis/results.tex
@@ -1,5 +1,7 @@
 \chapter{Results}
 
+(do not mind this section)
+
 Every simulation is run ten times and the mean and standard deviation($\sigma$) is calculated. 
 
 \section{Price}
@@ -20,7 +22,7 @@ Every simulation is run ten times and the mean and standard deviation($\sigma$) 
 	\includegraphics[width=9cm]{images/histories_deviation_fund.png}
 	\caption{ ...
 	}
-	\label{fig:alloc}
+	\label{fig:alloce}
 	\hspace*{2mm} 
 \end{figure}
 
@@ -34,7 +36,7 @@ Every simulation is run ten times and the mean and standard deviation($\sigma$) 
 	\includegraphics[width=9cm]{images/robustness_barabasi.png}
 	\caption{ ...
 	}
-	\label{fig:alloc}
+	\label{fig:allocee}
 	\hspace*{2mm} 
 \end{figure}
 
@@ -46,7 +48,7 @@ Every simulation is run ten times and the mean and standard deviation($\sigma$) 
 	\includegraphics[width=9cm]{images/robustness_coordinated.png}
 	\caption{ ...
 	}
-	\label{fig:alloc}
+	\label{fig:alloeeec}
 	\hspace*{2mm}
 \end{figure}
 
@@ -58,11 +60,9 @@ Every simulation is run ten times and the mean and standard deviation($\sigma$) 
 	\includegraphics[width=9cm]{images/histogram_shortest_path.png}
 	\caption{ ...
 	}
-	\label{fig:alloc}
+	\label{fig:alloeeeec}
 	\hspace*{2mm}
 \end{figure}
-
-
 
 (preferential attachment)
 
