--- a/docs/thesis/scaling.tex
+++ b/docs/thesis/scaling.tex
@@ -8,7 +8,7 @@ Andreas Antonopoulos has drawn similarities between the scaling of bitcoin with 
 	"Bitcoin is failing to scale. If we’re really lucky, bitcoin will continue to fail to scale gracefully for 25 years, just like the internet."~\cite{antonopoulos:the:internet:of:money}
 \end{displayquote}
 
-His quote in many ways are spot on as Usenet used a \textit{Store-and-forward} method for content to reach every server in the network. \textit{Store-and-forward} does not scale very well and is somewhat similar to the base Bitcoin protocol. The internet moved away from \textit{Store-and-forward} to more direct routing and Bitcoin is too, allowing transactions to happen off-chain.
+His quote in on point as Usenet used a \textit{Store-and-forward} method for content to reach every server in the network. \textit{Store-and-forward} does not scale very well and is somewhat similar to the base \gls{bitcoin} protocol. The internet moved away from \textit{Store-and-forward} to more direct routing and Bitcoin is too, allowing transactions to happen off-chain.
 
 In this chapter the various scaling alternatives will be discussed.
 
@@ -20,11 +20,11 @@ Increasing the amount of transactions would also increase the imposing cost for 
 
 % would come at an increased cost for the ecosystem (bandwidth, processing, and storage for relay nodes, as well as an impact on propagation speed of blocks on the network
 
-With a limit on 1 Megabyte Bitcoin is capable of ~10 transactions per second or 350.000 per day. This in contrast with a traditional payment processor such as visa who have capacity ~24.000 transactions per second. In it's current form Bitcoin does not have close to enough capacity as a payment processor for a significant fraction of the global population.
+With a limit on 1 Megabyte Bitcoin is capable of ~10 transactions per second or 350.000 per day. This in contrast with a traditional payment processor such as visa who have capacity ~24.000 transactions per second. In it's current form Bitcoin does not have close to enough capacity as a payment processor for a significant fraction of the global economy.
 
 \section{Increasing block size limit}
 
-There has been many proposals to increase the block size. Including a handful of BIPs:
+There has been many proposals to increase the block size. Including a handful of \gls{bip}s:
 
 \begin{itemize}
 	
@@ -37,7 +37,7 @@ There has been many proposals to increase the block size. Including a handful of
 	\item \textbf{BIP 103} aims to increase the block size in accordance with the technology. In practice however it increases the block size with 4.4\% every ~97 day, 17.7\% annually.~\cite{bip:0103:increase:with:technology}
 \end{itemize}
 
-Most of these BIPs are implemented as a hard forks. Older nodes would regard the bigger blocks as being over the limit and thus invalid.
+Most of these \gls{bip}s are implemented as a hard forks. Older nodes would regard the bigger blocks as being over the limit and thus invalid.
 If poorly executed, without a great majority upgrading the software in time, the network would be forked into two networks with diverging transaction histories. 
 
 % need better name for community worker
@@ -45,7 +45,7 @@ If poorly executed, without a great majority upgrading the software in time, the
 
 No proposal to increase the block size has yet received enough support to be activated. This has caused some controversy among community members and multiple have attempted to increase the limit by force. 
 
-One of the earliest attempts to increase the block size was when node Bitcoin XT implemented BIP 101 mentioned above. It failed to reach the miner consensus it required to activate. The BIP 101 was then removed and replaced by a 2 megabyte block limit which forked bitcoin into a new network known as bitcoin classic. Mike Hearn, co-creator of Bitcoin XT along with Gavin Andersen, has made his intention clear arguing that the block size must increase for bitcoin to reach any adoption beyond a fringe niche\cite{hearn:classic}. 
+One of the earliest attempts to increase the block size was when node Bitcoin XT implemented BIP 101 mentioned above. It failed to reach the miner consensus it required to activate. The BIP 101 was then removed and replaced by a 2 megabyte block limit which forked bitcoin into a new network known as Bitcoin Classic. Mike Hearn, co-creator of Bitcoin XT along with Gavin Andersen, has made his intention clear arguing that the block size must increase for bitcoin to reach any adoption beyond a fringe niche~\cite{hearn:classic}. 
 
 \begin{figure}[!htb]
 	\hspace*{-0.7cm} 
@@ -60,13 +60,13 @@ As figure \ref{fig:xt_nodes} attests, bitcoin XT and classic failed to receive s
 
 \subsection{The Bitcoin Cash saga}
 
-The failures of Bitcoin Classic was just the beginning of the scaling debate. The proposal of Segregated Witness\cite{bip:0141:segwit} was met with strong opposition as it was considered an overtly complicated and risky upgrade when the block limit could simply be increased. 
+The failures of Bitcoin Classic was just the beginning of the scaling debate. The proposal of Segregated Witness~\cite{bip:0141:segwit} was met with strong opposition as it was considered an overtly complicated and risky upgrade when the block limit could simply be increased. 
 
 Segregated Witness is in a way an increase in block space as it moves the unlocking script(witness) from the transaction to its own structure. Since each transaction takes up less space, more transactions fit in each block. The upgrade also addresses malleability, which many off-chain solutions require, and aligns economics incentives with resource costs~\cite{antonopoulos:segregated:witness:align:economic:incentives}. Although its possible to implement Lightning without a malleability fix, it increases its viability~\cite{song:lightning:malleability}.
 
-The malleability fix also addresses covert \texttt{ASICBOOST} or Antbleed. Covert \texttt{ASICBOOST} utilizes that part of \texttt{SHA256} may be pre-calculated if the last 16 bits remain the same. The last 16 bytes in the bitcoin header include the last 4 bytes of the Merkle root. By finding two Merkle Roots with the same last 4 bytes, allowing for less computation in finding hashes. To find a matching pair of roots, many roots must on average be tried. The space of viable roots is reduces if the transaction witness isn't malleable~\cite{song:asicboost} as the witness can't be manipulated to change the transaction and thus the Merkle root. Gregory Maxwell alluded that \texttt{ASICBOOST} had in fact been implemented in ASIC chips and proposed a fix~\cite{maxwell:asicboost:fix}. Bitmain, the largest chip manufacture, made a statement two days after addressing Maxwell's accusation~\cite{bitmain:response}. There is no way of ultimately proving if covert \texttt{ASICBOOST} was ever used\footnote{In further conversation with Bitmain representative Nishant Sharma at their headquarters in Beijing in December 2017 he stated that they would never use \texttt{ASICBOOST} of moral reasons. \texttt{ASICBOOST} was not longer viable on Bitcoin at that time, but was on Bitcoin cash and other currencies. He also stated that Bitmain had been in negotiation to buy the patent from Timo Hanke and Sergio Demian Lerner and had thus filed a patent for \texttt{ASICBOOST} with the Chinese government. The deal ultimately didn't fell through, and while this information is hearsay at best, the patent sparked many rumors at the time and drove opposition and is one reason for the eventual split.}. 
+The malleability fix also addresses covert \texttt{ASICBOOST} or Antbleed. Covert \texttt{ASICBOOST} utilizes that part of \texttt{SHA256} may be pre-calculated if the last 16 bits remain the same. The last 16 bytes in the bitcoin header include the last 4 bytes of the Merkle root. By finding two Merkle Roots with the same last 4 bytes, allowing for less computation in finding hashes. To find a matching pair of roots, many roots must on average be tried. The space of viable roots is reduces if the transaction witness isn't malleable~\cite{song:asicboost} as the witness can't be manipulated to change the transaction and thus the Merkle root. Gregory Maxwell alluded that \texttt{ASICBOOST} had in fact been implemented in ASIC chips and proposed a fix~\cite{maxwell:asicboost:fix}. Bitmain, the largest chip manufacture, made a statement two days after addressing Maxwell's accusation~\cite{bitmain:response}. There is no way of ultimately proving if covert \texttt{ASICBOOST} was ever used\footnote{In further conversation with Bitmain representative Nishant Sharma at their headquarters in Beijing in December 2017 he stated that they would never use \texttt{ASICBOOST} of moral reasons. \texttt{ASICBOOST} was not longer viable on \gls{bitcoin} at that time, but was on Bitcoin cash and other currencies. He also stated that Bitmain had been in negotiation to buy the patent from Timo Hanke and Sergio Demian Lerner and had thus filed a patent for \texttt{ASICBOOST} with the Chinese government. The deal ultimately didn't fell through, and while this information is hearsay at best, the patent sparked many rumors at the time and drove opposition and is one reason for the eventual split.}. 
 
-Segregated Witness When~BIP148\cite{bip:148:uasf:segwit}, a \textit{user-activated-soft-fork} scheduled for 22 August 2017 to activate Segregated Witness, was getting traction among nodes, the opposing party(including aforementioned Bitmain) decided to hard fork bitcoin into two by raising the block size limit. The hard fork took place on the first of August 2017 and created Bitcoin Cash.
+Segregated Witness When~BIP148~\cite{bip:148:uasf:segwit}, a \textit{user-activated-soft-fork} scheduled for 22 August 2017 to activate Segregated Witness, was getting traction among nodes, the opposing party(including aforementioned Bitmain) decided to hard fork bitcoin into two by raising the block size limit. The hard fork took place on the first of August 2017 and created Bitcoin Cash.
 
 Bitcoin Cash received significant economic support initially, although significantly below the original chain.
 
@@ -83,7 +83,7 @@ Although support for Bitcoin Cash has dwindled over the following years, it set 
 
 \subsection{The SegWit2x Compromise}
 
-Most other forks are insignificant. However SegWit2x carry some historical weight. SegWit2x was originally a compromise known as the Hong Kong Agreement reached in Hong Kong in February 2016 between many industry representatives and members of the development community~\cite{hong:kong:agreement}. The agreement was somewhat ambiguous leading to fall out and a subsequent New York Agreement were reached at the conference Consensus in May 2017~\cite{new:york:agreement}. Notable absent from the latter agreement were the whole Core development team leading to the \texttt{UASF} and Bitcoin cash fork. Many actors still viewed the New York Agreement as valid after the split and many supported a hard fork to 2MB block limit on the main bitcoin chain in late 2017. The fork was ultimately called off and only a few rogue actors followed through with it. A critical bug in the software led to the forked chain to halt in it's infancy. 
+Most forks are insignificant. However SegWit2x carry some historical weight. SegWit2x was originally a compromise known as the Hong Kong Agreement reached in Hong Kong in February 2016 between many industry representatives and members of the development community~\cite{hong:kong:agreement}. The agreement was somewhat ambiguous leading to fall out and a subsequent New York Agreement were reached at the conference Consensus in May 2017~\cite{new:york:agreement}. Notable absent from the latter agreement were the whole Core development team leading to the \texttt{UASF} and Bitcoin cash fork. Many actors still viewed the New York Agreement as valid after the split and many supported a hard fork to 2MB block limit on the main bitcoin chain in late 2017. The fork was ultimately called off and only a few rogue actors followed through with it. A critical bug in the software led to the forked chain to halt in it's infancy. 
 
 \section{Removing or reducing decentralization}
 
@@ -103,5 +103,5 @@ Payment channel networks may be constructed in many different ways, a few distin
 
 \section{Rationale for small blocks}
 
-Bitcoins advantage does not lie in its ability to scale. In fact, centralized solutions can trivially outperform Bitcoin many times over with regard to cost, speed and reliability. Its strength lie in transparency, immutability and that it require no trust in any other party at all. These characteristics are both unique and valuable. Solutions to scale the network ought to not compromise the fundamental properties making it worth to scale in the first place. Therefor the cost of participation must remain low, which require that the cost of validating blocks must remain low and thus require small blocks.
+\gls{bitcoin}s advantage does not lie in its ability to scale. In fact, centralized solutions can trivially outperform Bitcoin many times over with regard to cost, speed and reliability. Its strength lie in transparency, immutability and that it require no trust in any other party at all. These characteristics are both unique and valuable. Solutions to scale the network ought to not compromise the fundamental properties making it worth to scale in the first place. Therefor the cost of participation must remain low, which require that the cost of validating blocks must remain low and thus require small blocks.
 
